2003-02-25  Steven Munroe  <sjmunroe@us.ibm.com>

        * elf/elf.h: Add new R_PPC64_* relocs for TLS.
        * elf/tls-macros.h [__powerpc64__]
        (TLS_LE, TLS_IE, TLS_LD, TLS_GD): Define.
	* sysdeps/powerpc/powerpc64/elf/configure.in: New file.
	* sysdeps/powerpc/powerpc64/elf/configure: New file (generated).

        * sysdeps/powerpc/elf/libc-start.c (__libc_start_main):
	Do DL_SYSDEP_OSCHECK here, matching 2002-12-01 change to generic file.

2003-02-25  Andreas Jaeger  <aj@suse.de>

	* manual/memory.texi (Malloc Tunable Parameters): Clarify
	behaviour of M_MMAP_THRESHOLD.

2003-02-25  Roland McGrath  <roland@redhat.com>

	* resolv/res_init.c (res_thread_freeres): Bail out if _res.nscount is
	zero, inidicating _res was not initialized yet.

2003-02-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ttyname_r.c (__ttyname_r): Remove EACCES
	test.

2003-02-24  Roland McGrath  <roland@redhat.com>

	* sysdeps/posix/pause.c: Add LIBC_CANCEL_HANDLED.

2003-02-23  Roland McGrath  <roland@redhat.com>

	* sysdeps/posix/pause.c: New file.
	* sysdeps/unix/common/pause.c: File removed.

2003-02-23  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/bits/confname.h: Remove #ifs.

	* posix/Makefile (CFLAGS-regex.c): Remove RE_ENABLE_I18N definition.
	* posix/regex_internal.h (RE_ENABLE_I18N): Pretty printing.

	* resolv/res_libc.c [USE___THREAD] (_res): Initialize _vcsock
	element to -1.

2003-02-22  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-sysdep.c: Avoid warning.

2003-02-22  Roland McGrath  <roland@redhat.com>

	* resolv/tst-leaks.c: New file by Daniel Jacobowitz <drow@mvista.com>.
	* resolv/Makefile (tests): Add tst-leaks.
	($(objpfx)tst-leaks): Depend on $(objpfx)libresolv.so.
	(tst-leaks-ENV): New variable.
	($(objpfx)mtrace-tst-leaks): New target.
	(tests): Depend on it.

	* include/libc-internal.h: Declare __libc_thread_freeres.

	* Makerules: Fix last change to use $($(subdir)-version) when set.
